--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ img.emoji {
                   </h4>
                </header>               
                <!-- Link da Página de Vendas -->
-               <button id="surveyAgree" class="stepButton yesBtn link-pv" href="https://oteudesafio.com?src=null" style="padding: 30px 0 50px 0;">ACESSAR PRÓXIMO PASSO</button>
+               <button id="surveyAgree" class="stepButton yesBtn link-pv" href="https://oteudesafio.com?src=quiz" style="padding: 30px 0 50px 0;">ACESSAR PRÓXIMO PASSO</button>
                <!-- Link da Página de Vendas -->
             
             </article>
