--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ img.emoji {
         var urlparams = new URL(url_string);
         var src = urlparams.searchParams.get("src"); 
         var buttons = $('.link-pv');
-        var url = linkCheckout + '?src=oteudesafio-' + src;
+        var url = linkCheckout + '?src=' + src;
         $(buttons).attr('href', url);
     });
 </script>		</div>
